icon width change to fix cut off classification icons

--- a/app/assets/stylus/styles/icon.styl
+++ b/app/assets/stylus/styles/icon.styl
@@ -59,9 +59,11 @@
     background-image url('/public/images/icon/private.png')
 
 
+  &.classification
+    width b1
+    
   &.classification.PRIVATE
     background-image url('/public/images/icon/private.png')
-    width b1
 
   &.classification.RESTRICTED
     background-image url('/public/images/icon/identified.png')
@@ -71,7 +73,6 @@
 
   &.classification.PUBLIC
     background-image url('/public/images/icon/public.png')
-
 
   &.dataset
     background-image url('/public/images/icon/dataset.svg')
